cart layout issue fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -752,3 +752,8 @@ span.text-red {
     margin: auto;
   }
 }
+@media screen and (max-width: 416px) {
+  .cart-container {
+    width: auto;
+  }
+}
